# nova

./: .gitignore  BOLT_INTEGRATION_STARTHERE.md  CHANGELOG.md  CODEX_ROADMAP.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  NETWORKING.md  NovaFile  NovaFile.test  README.md  ROADMAP.md  SECURITY.md  TODO.md  TestNovaFile  build.zig  build.zig.zon  demo.sh  nova.desktop
archive/: CODEBASE_REVIEW_2025.md  Virt-manager  index.html  qemu.1
docs/: GUI_REDESIGN.md  README.md  SNAPSHOTS.md  TOKYO_NIGHT_THEMES.md  WAYLAND_IMPLEMENTATION_SUMMARY.md  WAYLAND_INTEGRATION.md  WAYLAND_QUICKSTART.md  docs-portal.md  migrating-from-virt-manager.md  observability.md  release-playbook.md  rtx50-series.md  support-tooling.md
docs/commands/: commands.md
docs/gui/: colors.md  overview.md
docs/looking-glass/: README.md  advanced.md  configuration.md  installation.md  overview.md  performance-tuning.md  troubleshooting.md
docs/migration/: overview.md
docs/networking/: commands.md  overview.md
docs/operations/: observability.md  overview.md  packaging.md  support-tooling.md
docs/project/: docs-portal.md  overview.md  release-playbook.md  roadmap.md
docs/vfio/: overview.md  rtx-50-series.md
docs/wayland/: overview.md  quickstart.md
examples/: NovaFile.metrics.toml  alert-rules.yml  alertmanager-silence.json  grafana-nova.json  prometheus-scrape.yml  support-bundle-walkthrough.md
examples/systemd/: nova-metrics.service
examples/vm-templates/: arch-gnome-nvidia.toml  arch-nvidia-dev.toml  ml-pytorch.toml  ml-tensorflow.toml  stable-diffusion.toml
packaging/: Makefile  README.md
packaging/appimage/: AppImageBuilder.yml  AppRun
packaging/arch/: .SRCINFO  PKGBUILD  nova.install
packaging/config/: nova.conf
packaging/debian/: changelog  control  nova-virtualization.postinst  rules
packaging/fedora/: nova-virtualization.spec
packaging/flatpak/: com.nova.Virtualization.yml
packaging/scripts/: smoke-tests.sh
packaging/systemd/: nova-metrics.service  nova.service
packaging/udev/: 99-nova-vfio.rules
src/: arch_integration.rs  bolt_runtime.rs  commands.zig  config.rs  config.zig  console.rs  console_enhanced.rs  container.rs  container.zig  container_runtime.rs  docker_runtime.rs  error.rs  firewall.rs  gpu_doctor.rs  gpu_passthrough.rs  gui.zig  gui_demo.zig  gui_gpu.rs  gui_main.rs  gui_network.rs  gui_simple.zig  instance.rs  lib.rs  libvirt.rs  logger.rs  logger.zig  looking_glass.rs  main.rs  main.zig  migration.rs  monitoring.rs  network.rs  pci_passthrough.rs  performance.rs  performance_monitor.rs  port_monitor.rs  preflight.rs  prometheus.rs  root.zig  rustdesk_integration.rs  (+13 more)
tests/: gpu_passthrough_tests.rs  storage_pool_tests.rs  template_tests.rs
