[package]
name = "nova"
version = "0.1.0"
edition = "2024"
authors = ["Nova Team"]
description = "Wayland-Native Virtualization & Container Manager"
license = "MIT"

[[bin]]
name = "nova"
path = "src/main.rs"

[[bin]]
name = "nova-gui"
path = "src/gui_main.rs"

[dependencies]
# CLI and config
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System and process management
nix = "0.27"
tokio = { version = "1.0", features = ["full"] }

# GUI framework
egui = "0.24"
eframe = { version = "0.24", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }

# Async and utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
